bk_ida/gobmkida/c3/compute_primary_domains
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_primary_domains/src/engine/optics.c:1082:7: error: use of undeclared identifier 'byte_9C688D'
v49 = byte_9C688D[v46]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/compute_primary_domains/src/obj/1/optics.o] Error 1
